Adjust styles for improved responsiveness and correct alignments.

--- a/trab_02/styles.css
+++ b/trab_02/styles.css
@@ -29,6 +29,7 @@ body {
 
 h1 {
     color: white;
+    margin-bottom: 25px;
 }
 
 #app {
@@ -46,12 +47,22 @@ h1 {
 .standings {
     display: flex;
     flex-direction: column;
-    width: max-content;
+    width: 30%;
+    min-width: max-content;
     padding: 10px;
     margin: 10px 0;
     border-radius: 5px;
     border:2px dotted black;
 
+}
+
+@media (max-width: 680px) {
+    .participants,
+    .matches,
+    .results,
+    .standings {
+        width: 80%;
+    }
 }
 
 button {
@@ -90,8 +101,8 @@ button {
 #clear-simulation-button{
     width: 100%;
     height: 50px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
     
 }
 
@@ -128,8 +139,16 @@ input:focus{
 
 #modal {
     background-color: #f4f4f4;
+    gap:30px;
     padding: 20px;
     border-radius: 5px;
     max-width: 300px;
     text-align: center;
+
+}
+
+#modal>p{
+    margin-bottom: 20px;
+    font-size: large;
+    font-weight: bold;
 }
